import net.fabricmc.loom.task.RemapJarTask

plugins {
    id 'com.github.johnrengelman.shadow' version '7.1.2'
    id 'fabric-loom' version '1.7-SNAPSHOT'
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

repositories {
    maven {
        url 'https://masa.dy.fi/maven'
    }

    maven {
        url 'https://maven.terraformersmc.com/releases/'
    }

    // maven 仓库加速
    mavenLocal()
    maven {
        url 'https://maven.aliyun.com/repository/public/'
    }
    mavenCentral()
    maven {
        url 'https://maven.aliyun.com/repository/gradle-plugin'
    }

    // Add repositories to retrieve artifacts from in here.
    // You should only use this when depending on other mods because
    // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
    // See https://docs.gradle.org/current/userguide/declaring_repositories.html
    // for more information about repositories.
}

dependencies {
    // To change the versions see the gradle.properties file
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    // Fabric API. This is technically optional, but you probably want it anyway.
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    modImplementation "fi.dy.masa.malilib:malilib-fabric-${project.malilib_minecraft_version}:${project.malilib_version}"

    implementation group: "com.alphacephei", name: "vosk", version: project.vosk_version
    implementation group: "org.openjdk.nashorn", name: "nashorn-core", version: project.nashorn_version
}

shadowJar {
    dependencies {
        exclude(dependency {
            it.moduleGroup != "com.alphacephei" && it.moduleGroup != "org.openjdk.nashorn"
        })
    }
}

processResources {
    def properties = [
            version: project.version,
            malilib_version: malilib_version,
            fabric_loader_version: loader_version
    ]
    inputs.properties properties

    filesMatching("fabric.mod.json") {
        expand properties
    }
}

def targetJavaVersion = 21
tasks.withType(JavaCompile).configureEach {
    // ensure that the encoding is set to UTF-8, no matter what the system default is
    // this fixes some edge cases with special characters not displaying correctly
    // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
    // If Javadoc is generated, this must be specified in that task too.
    it.options.encoding = "UTF-8"
    it.options.release = 21
}

java {
    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
    if (JavaVersion.current() < javaVersion) {
        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
    }
    archivesBaseName = project.archives_base_name + "-fabric-" + project.actual_support_minecraft_version
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.archivesBaseName}"}
    }
}

// configure the maven publication
publishing {
    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/winsrewu/NoGLErr")
            credentials {
                username = System.getenv("GITHUB_ACTOR")
                password = System.getenv("GITHUB_TOKEN")
            }
        }
    }

    publications {
        gpr(MavenPublication) {
            artifactId = "noglerr"
            version = project.minecraft_version + "-fabric-" + version

            from(components.java)
        }
    }
}

task("remapShadowJar", type: RemapJarTask) {
    dependsOn(shadowJar)
    input = shadowJar.archiveFile
    addNestedDependencies = true
}

assemble.dependsOn(remapShadowJar)